Fixed nav height and z-index on multiple screen sizes

--- a/src/css/books-styles.css
+++ b/src/css/books-styles.css
@@ -1,7 +1,7 @@
 /* Books styles */
 
 .books-wrapper {
-    margin: 4.5rem auto 0 auto;
+    margin: 0 auto;
     height: 100%;
     text-align: center;
     width: 80vw;
