--- a/src/css/index-styles.css
+++ b/src/css/index-styles.css
@@ -1,26 +1,25 @@
-
 .index-text {
-    margin: 2.5rem auto 0 auto; 
-    width: 60vw; 
-    height: 100%; 
-    display: flex; 
-    flex-direction: column; 
+    margin: 0 auto;
+    width: 60vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
 @media screen and (max-width: 768px) {
     .index-text {
         width: 80vw;
-    }   
+    }
 }
 
 .index-text h2 {
-    font-family: Lato, Helvetica, Arial, Lucida, sans-serif; 
+    font-family: Lato, Helvetica, Arial, Lucida, sans-serif;
     font-size: 2rem;
 }
 
 .index-text p {
-    font-family: Merriweather, Georgia, Times New Roman, serif; 
+    font-family: Merriweather, Georgia, Times New Roman, serif;
     font-size: 1.5rem;
 }
 
@@ -29,8 +28,8 @@
 }
 
 .say-hello {
-    font-family: Merriweather, Georgia, Times New Roman, serif; 
-    font-size: 1.5rem; 
+    font-family: Merriweather, Georgia, Times New Roman, serif;
+    font-size: 1.5rem;
     text-align: center;
 }
 
