--- a/src/css/writing-styles.css
+++ b/src/css/writing-styles.css
@@ -1,13 +1,12 @@
 /* /writing styles */
 
 .writing-title {
-    margin: 4.5rem auto 0 auto; 
-    height: 100%; 
+    height: 100%;
     text-align: center;
 }
 
 .writing-title h2 {
-    font-family: Lato, Helvetica, Arial, Lucida, sans-serif; 
+    font-family: Lato, Helvetica, Arial, Lucida, sans-serif;
     font-size: 2rem;
 }
 
@@ -17,7 +16,7 @@
 }
 
 .blogpost-link div {
-    width: 60vw; 
+    width: 60vw;
     margin: 0 auto;
 }
 
@@ -28,20 +27,20 @@
 }
 
 .blogpost-link h2 {
-    font-family: Lato, Helvetica, Arial, Lucida, sans-serif; 
-    font-size: 1.4rem; 
-    color: blue; 
+    font-family: Lato, Helvetica, Arial, Lucida, sans-serif;
+    font-size: 1.4rem;
+    color: blue;
     text-decoration: underline;
 }
 
 .blogpost-link p {
-    font-family: Merriweather, Georgia, Times New Roman, serif; 
+    font-family: Merriweather, Georgia, Times New Roman, serif;
     font-size: 1.1rem;
 }
 
 .say-hello {
-    font-family: Merriweather, Georgia, Times New Roman, serif; 
-    font-size: 1.5rem; 
+    font-family: Merriweather, Georgia, Times New Roman, serif;
+    font-size: 1.5rem;
     text-align: center;
 }
 
